# rust-action

./: .env  Cargo.toml  Dockerfile  action.yml  docker-compose.yml
.github/workflows/: example.yml
src/: main.rs  otel.rs
src/github/: command.rs  context.rs  log.rs  mod.rs
