[package]
name = "rust-action"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"

# tower-http = { version = "0.6.1", features = ["trace"] }
# tokio = { version = "1.40.0", features = ["full"] }
#
# tracing = "0.1.40"
# tracing-log = "0.2.0"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
# tracing-opentelemetry = "0.27.0"
#
# opentelemetry = { version = "0.26.0", features = ["trace"] }
# opentelemetry_sdk = { version = "0.26.0", features = ["trace", "rt-tokio"] }
# opentelemetry-otlp = { version = "0.26.0", features = ["trace"]}
# opentelemetry-stdout = { version = "0.26.0", features = ["trace"] }
# opentelemetry-semantic-conventions = { version = "0.26.0", features = ["semconv_experimental"] }
# hyper = "1.4.1"

tokio = { version = "1.41.1", features = ["full"] }

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.28.0"

opentelemetry = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"]}
